[package]
name = "serverlessrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json="1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.9", features = ["json"]}
tokio = { version = "1.16.1", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
actix-web = "4"
ethers="2.0.2"
uuid = { version = "1.3.0",features = ["v4","fast-rng","macro-diagnostics"]}
validator = { version = "0.16", features = ["derive"] }
log = "0.4"
awc = "3.2.0"
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
