[package]
name = "oyster-serverless"
version = "0.1.0"
edition = "2021"

[lib]
name = "serverless"
path = "src/lib.rs"

[[bin]]
name = "oyster-serverless"
path = "src/main.rs"

[[bin]]
name = "cgroups_retriever"
path = "src/cgroups_retriever.rs"

[dependencies]
serde_json="1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.9", features = ["json"]}
tokio = { version = "1.16.1", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
actix-web = "4"
validator = { version = "0.16", features = ["derive"] }
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
thiserror = "1.0.50"
hex = "0.4.3"
rand = "0.8.5"
data-encoding = "2.5.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
k256 = "0.13.2"
