[package]
name = "oyster-serverless"
version = "0.1.0"
edition = "2021"

[lib]
name = "serverless"
path = "src/lib.rs"

[[bin]]
name = "oyster-serverless"
path = "src/main.rs"

[[bin]]
name = "cgroups_retriever"
path = "src/cgroups_retriever.rs"

[dependencies]
actix-web = "4"
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
data-encoding = "2.5.0"
filetime = "0.2.23"
hex = "0.4.3"
k256 = { version = "0.13.2", features = ["ecdsa", "ecdsa-core"] }
openssl = { version = "0.10", features = ["vendored"] }
rand = "0.8.5"
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.50"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
tokio = { version = "1.16.1", features = ["full"] }
validator = { version = "0.16", features = ["derive"] }
